# sequential-quantum-gate-decomposer

./: .codedocs  .giosave9eO802  .gitignore  AGENTS.md  Bayes_opt.py  CMakeLists.txt  CQGD.cbp  Doxyfile  LICENSE  MANIFEST.in  Makefile  Makefile.am  Makefile.in  QC_sim_benchmark.py  README.md  benchmark.py  benchmark_PartAM.py  benchmark_PartAM_no_cleanup.py  commonvars.in  conda_env_example.yaml  configure  configure.ac  costfuncs_entropy_and_tv.txt  do.sh  example.py  out.txt  pyproject.toml  pytest.ini  python_interface.cpp  python_interface.h  run_tests.py  setup.py
common/: Adam.cpp  BFGS_Powell.cpp  Bayes_Opt.cpp  Makefile  Makefile.am  Makefile.in  Powells_method.cpp  common.cpp  common_DFE.cpp  config_element.cpp  dot.cpp  grad_descend.cpp  lbfgs.cpp  logging.cpp  matrix.cpp  matrix_real.cpp  mpi_base.cpp  numpy_interface.cpp  printclasssq.cpp  printclasssq.h  tolmin.cpp
common/include/: Adam.h  BFGS_Powell.h  Bayes_Opt.h  Config.h.in  Powells_method.h  QGDTypes.h  common.h  common_DFE.h  config_element.h  dot.h  grad_descend.h  lbfgs.h  logging.h  matrix.h  matrix_base.h  matrix_real.h  matrix_sparse.h  mpi_base.h  numpy_interface.h  printclasssq.h  tolmin.h
common/source/: Makefile  common.cpp
decomposition/: Decomposition_Base.cpp  Decomposition_Base.py  Decomposition_Tree.cpp  Functor_Cost_Function_Gradient.cpp  Functor_Get_Operation_Products.cpp  Makefile  Makefile.am  Makefile.in  N_Qubit_Decomposition.cpp  N_Qubit_Decomposition.py  N_Qubit_Decomposition_Base.cpp  N_Qubit_Decomposition_Cost_Function.cpp  N_Qubit_Decomposition_adaptive.cpp  N_Qubit_Decomposition_adaptive_Cost_Function.cpp  N_Qubit_Decomposition_adaptive_general.cpp  N_Qubit_Decomposition_custom.cpp  Optimization_Interface.cpp  Sub_Matrix_Decomposition.cpp  Sub_Matrix_Decomposition.py  Sub_Matrix_Decomposition_Cost_Function.cpp  Sub_Matrix_Decomposition_Custom.cpp  Two_Qubit_Decomposition.py
decomposition/include/: Decomposition_Base.h  Decomposition_Tree.h  Functor_Cost_Function_Gradient.h  Functor_Get_Operation_Products.h  N_Qubit_Decomposition.h  N_Qubit_Decomposition_Base.h  N_Qubit_Decomposition_Cost_Function.h  N_Qubit_Decomposition_adaptive.h  N_Qubit_Decomposition_adaptive_Cost_Function.h  N_Qubit_Decomposition_adaptive_general.h  N_Qubit_Decomposition_custom.h  Optimization_Interface.h  Sub_Matrix_Decomposition.h  Sub_Matrix_Decomposition_Cost_Function.h  Sub_Matrix_Decomposition_Custom.h  Two_Qubit_Decomposition.h
decomposition/source/: Decomposition_Base.cpp  Makefile  N_Qubit_Decomposition.cpp  Sub_Matrix_Decomposition.cpp  Two_Qubit_Decomposition.cpp
operations/: CH.cpp  CNOT.cpp  CNOT.py  CZ.cpp  CZ.py  Gate.cpp  Gates_block.cpp  Makefile  Makefile.am  Makefile.in  Operation.cpp  Operation.py  Operation_block.cpp  Operations.py  U3.cpp  U3.py  operation_block.py
operations/include/: CH.h  CNOT.h  CZ.h  Gates_block.h  Operation.h  Operation_block.h  U3.h
operations/source/: CNOT.cpp  Makefile  Operation.cpp  Operation_block.cpp  U3.cpp  operation_block.cpp
qgd/: Makefile.am  Makefile.in
qgd_python/: CMakeLists.txt  N_Qubit_Decomposition.py  qgd_N_Qubit_Decomposition.cpp  qgd_N_Qubit_Decomposition.py  qgd_N_Qubit_Decomposition_Wrapper.cpp  utils.py
qgd_python/decomposition/: CMakeLists.txt  qgd_N_Qubit_Decomposition.py  qgd_N_Qubit_Decomposition_Wrapper.cpp  qgd_N_Qubit_Decomposition_adaptive.py  qgd_N_Qubit_Decomposition_adaptive_Wrapper.cpp  qgd_N_Qubit_Decomposition_custom.py  qgd_N_Qubit_Decomposition_custom_Wrapper.cpp  qgd_N_Qubit_State_Preparation_adaptive.py
qgd_python/gates/: CMakeLists.txt  CNOT.pxd  qgd_CH.cpp  qgd_CH.py  qgd_CH_Wrapper.cpp  qgd_CNOT.cpp  qgd_CNOT.py  qgd_CNOT.pyx  qgd_CNOT_Wrapper.cpp  qgd_CZ.cpp  qgd_CZ.py  qgd_CZ_Wrapper.cpp  qgd_Circuit.cpp  qgd_Circuit.py  qgd_Circuit_Wrapper.cpp  qgd_Gates_Block.cpp  qgd_Gates_Block.py  qgd_Gates_Block_Wrapper.cpp  qgd_Operation_Block.cpp  qgd_Operation_Block.pxd  qgd_Operation_Block.pyx  qgd_RX.cpp  qgd_RX.py  qgd_RX_Wrapper.cpp  qgd_RY.cpp  qgd_RY.py  qgd_RY_Wrapper.cpp  qgd_RZ.cpp  qgd_RZ.py  qgd_RZ_Wrapper.cpp  qgd_SX.cpp  qgd_SX.py  qgd_SX_Wrapper.cpp  qgd_SYC.cpp  qgd_U3.cpp  qgd_U3.pxd  qgd_U3.py  qgd_U3.pyx  qgd_U3_Wrapper.cpp  qgd_X.cpp  (+8 more)
qgd_python/nn/: CMakeLists.txt  qgd_nn.py  qgd_nn_Wrapper.cpp
qgd_python/test/: test_decomposition.py
qgd_python/variational_quantum_eigensolver/: CMakeLists.txt  qgd_Variational_Quantum_Eigensolver_Base.py  qgd_Variational_Quantum_Eigensolver_Base_Wrapper.cpp
random_unitary/: Makefile  Makefile.am  Makefile.in  Random_Orthogonal.cpp  Random_Unitary.cpp  few_CNOT_unitary.py
random_unitary/include/: Random_Orthogonal.h  Random_Unitary.h
random_unitary/source/: Makefile  Random_Unitary.cpp
squander/VQA/: CMakeLists.txt  __init__.py  qgd_GQML_Base_Wrapper.cpp  qgd_Generative_Quantum_Machine_Learning_Base.py  qgd_VQE_Base_Wrapper.cpp  qgd_Variational_Quantum_Eigensolver_Base.py
squander/decomposition/: CMakeLists.txt  guided_tree.py  qgd_N_Qubit_Decomposition.py  qgd_N_Qubit_Decomposition_Plywood.py  qgd_N_Qubit_Decomposition_Plywood_Wrapper.cpp  qgd_N_Qubit_Decomposition_Tabu_Search.py  qgd_N_Qubit_Decomposition_Tabu_Search_Wrapper.cpp  qgd_N_Qubit_Decomposition_Tree_Search.py  qgd_N_Qubit_Decomposition_Tree_Search_Wrapper.cpp  qgd_N_Qubit_Decomposition_Wrapper.cpp  qgd_N_Qubit_Decomposition_Wrapper_New.cpp  qgd_N_Qubit_Decomposition_adaptive.py  qgd_N_Qubit_Decomposition_adaptive_Wrapper.cpp  qgd_N_Qubit_Decomposition_custom.py  qgd_N_Qubit_Decomposition_custom_Wrapper.cpp  qgd_N_Qubit_Decomposition_non_unitary_adaptive.py  qgd_N_Qubit_Decomposition_non_unitary_adaptive_Wrapper.cpp  qgd_N_Qubit_Decompositions_Wrapper.cpp  qgd_N_Qubit_State_Preparation_adaptive.py  qgd_SABRE.py  qgd_WideCircuitCompression.py  qgd_Wide_Circuit_Optimization.py  sympy_gen.py  sympy_param.py
squander/gates/: CMakeLists.txt  gates_Wrapper.cpp  gatesupport.py  (+39 more)
test_standalone/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  apply_kernel_test.cpp  custom_gate_structure_test.cpp  decomposition_test.cpp  matrix_float_test.cpp  matrix_test.cpp  test_matrix_float.cpp
(+6217 files in other folders)
